[package]
name = "hq"
version = "0.1.0"
authors = ["DenSASoftware <social@densa.software>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
tiny_http = "0.7"
mime_guess = "2"
url = "2.1.1"
percent-encoding = "2.1.0"

